[package]
name = "turrets-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.12"
bevy_prototype_lyon = "0.10.0"
rand = "0.8.5"
serde = "1.0.143"
serde_json = "1.0.83"

[dependencies.web-sys]
version = "0.3.57"
features = [
    "Storage",
]
